# ray-trace-cpu

./: .gitignore  CMakeLists.txt
src/v1/: camera.h  hittable.h  interval.h  main.cpp  material.h  vec3.h
src/v1+bvh/: aabb.h  bvh.h  camera.h  hittable.h  interval.h  main.cpp  material.h
src/v2/: aabb.h  bvh.h  camera.h  hittable.h  interval.h  main.cpp  material.h  rtw_image.h  texture.h  vec3.h
